--- a/css/estilo.css
+++ b/css/estilo.css
@@ -24,6 +24,19 @@ body {
     height: 420px;
     margin: 40px 10px;
     background: linear-gradient(to right, #e8e8e8, #c1c1c1);
+    display: flex;
+    flex-direction: column;
+}
+
+.tela .d-1{
+    flex: 1;
+}
+
+.tela .d-2{
+    height: 50px;
+    font-size: 14px;
+    border-top: 2px solid #000;
+    padding-left: 10px;
 }
 
 .lado-direito{
