--- a/css/estilo.css
+++ b/css/estilo.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .urna{
@@ -30,6 +31,38 @@ body {
 
 .tela .d-1{
     flex: 1;
+    display: flex;
+}
+
+.d-1 .d-1-esquerda{
+    background-color: #48c079;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+}
+
+.d-1-esquerda .d-1-1{
+    height: 70px;
+}
+
+.d-1-esquerda .d-1-2{
+    height: 70px;
+}
+
+.d-1-esquerda .d-1-3{
+    height: 70px;
+}
+
+.d-1-esquerda .d-1-4{
+    flex: 1;
+    height: 50px;
+    line-height: 30px;
+}
+
+.d-1 .d-1-direita{
+    background-color: #000;
+    width: 90px;
 }
 
 .tela .d-2{
