--- a/css/estilo.css
+++ b/css/estilo.css
@@ -48,10 +48,18 @@ body {
 
 .d-1-esquerda .d-1-2{
     height: 70px;
+    text-align: center;
 }
 
 .d-1-esquerda .d-1-3{
     height: 70px;
+}
+
+.d-1-3 .numero{
+    display: inline-block;
+    width: 50px;
+    height: 40px;
+    border: 1px solid #000;
 }
 
 .d-1-esquerda .d-1-4{
