--- a/css/estilo.css
+++ b/css/estilo.css
@@ -35,11 +35,12 @@ body {
 }
 
 .d-1 .d-1-esquerda{
-    background-color: #48c079;
     flex: 1;
     display: flex;
     flex-direction: column;
     padding-left: 20px;
+    padding-top: 20px;
+    font-size: 20px;
 }
 
 .d-1-esquerda .d-1-1{
@@ -58,8 +59,11 @@ body {
 .d-1-3 .numero{
     display: inline-block;
     width: 50px;
-    height: 40px;
+    height: 60px;
     border: 1px solid #000;
+    text-align: center;
+    font-size: 30px;
+    line-height: 60px;
 }
 
 .d-1-esquerda .d-1-4{
@@ -69,13 +73,29 @@ body {
 }
 
 .d-1 .d-1-direita{
-    background-color: #000;
-    width: 90px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 160px;
+}
+
+.d-1-direita .d-1-image{
+    border: 1px solid #000;
+    background-color: #fff;
+    text-align: center;
+}
+
+.d-1-direita .d-1-image img{
+    width: 100%;
+}
+
+.d-1-image.small{
+    width: 90%;
 }
 
 .tela .d-2{
-    height: 50px;
-    font-size: 14px;
+    height: 70px;
+    font-size: 20px;
     border-top: 2px solid #000;
     padding-left: 10px;
 }
@@ -217,7 +237,10 @@ header img{
     background-color:#fff;
     color: #000;
     font-size: 15px;
-    text-align: center;
+    display: flex;
+    border-radius: 6px;
+    align-items: center;
+    justify-content: center;
     margin-right: 20px;
     cursor: pointer;
     box-shadow: 3px 3px 0px #555;
@@ -229,19 +252,25 @@ header img{
     background-color: #f09046;
     color: #000;
     font-size: 15px;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6px;
     margin-right: 20px;
     cursor: pointer;
     box-shadow: 3px 3px 0px #555;
 }
 
 .verde{
-    width: 200px;
+    width: 250px;
     height: 70px;
     background-color: #48c079;
     color: #000;
     font-size: 15px;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6px;
     cursor: pointer;
     box-shadow: 3px 3px 0px #555;
 }
