--- a/css/estilo.css
+++ b/css/estilo.css
@@ -277,7 +277,16 @@ header img{
 }
 
 .aviso-grande{
-    font-size: 40px;
+    font-size: 60px;
     font-weight: bold;
     text-align: center;
+}
+
+.aviso-gigante{
+    font-size: 100px;
+    font-weight: bold;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
